--- a/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
+++ b/Levantamento de Perdas/Src/EditorState/Tela_Inicial_app.editorstate.json
@@ -2367,7 +2367,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "165",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "X",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -2383,7 +2383,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "252",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Width",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
