--- a/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
@@ -265,6 +265,86 @@ Tela_Inicial_app As screen:
                         MAQUINA = Index(
                             ComboBoxmaquina_ini.SelectedItems,
                             50
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            51
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            52
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            53
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            54
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            55
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            56
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            57
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            58
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            59
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            60
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            61
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            62
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            63
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            64
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            65
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            66
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            67
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            68
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            69
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            70
                         ).CAF
                     )
                     &&((UTE = ComboBoxute_ini.Selected.Result) || ComboBoxute_ini.Selected.Result = Blank())
@@ -542,6 +622,86 @@ Tela_Inicial_app As screen:
                         MAQUINA = Index(
                             ComboBoxmaquina_ini.SelectedItems,
                             50
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            51
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            52
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            53
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            54
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            55
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            56
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            57
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            58
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            59
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            60
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            61
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            62
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            63
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            64
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            65
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            66
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            67
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            68
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            69
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            70
                         ).CAF
                     )
                     &&((UTE = ComboBoxute_ini.Selected.Result) || ComboBoxute_ini.Selected.Result = Blank())
@@ -835,6 +995,86 @@ Tela_Inicial_app As screen:
                         MAQUINA = Index(
                             ComboBoxmaquina_ini.SelectedItems,
                             50
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            51
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            52
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            53
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            54
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            55
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            56
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            57
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            58
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            59
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            60
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            61
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            62
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            63
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            64
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            65
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            66
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            67
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            68
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            69
+                        ).CAF,
+                        MAQUINA = Index(
+                            ComboBoxmaquina_ini.SelectedItems,
+                            70
                         ).CAF
                     )
                     &&((UTE = ComboBoxute_ini.Selected.Result) || ComboBoxute_ini.Selected.Result = Blank())
