--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -433,9 +433,8 @@
         Height: =20
         Size: =12
         Text: |
-            =Sum(Prod_0,Prod_1,Prod_2,Prod_3,Prod_4,Prod_5,Prod_6,Prod_7,Prod_8,Prod_9,Prod_10,Prod_11,Prod_12,Prod_13,Prod_14,Prod_15,Prod_16,Prod_17,Prod_18,Prod_19,Prod_20,Prod_21,Prod_22,Prod_23)
-            
-            //If( IsBlank(Max(Filter( CreateMaquina ; Cbox_Maquina.Selected.Result = CAF).CAPACIDADE ; CAPACIDADE));0;Max(Filter( CreateMaquina ; Cbox_Maquina.Selected.Result = CAF).CAPACIDADE ; CAPACIDADE))
+            =If( IsBlank(Max(Filter( CreateMaquina , Cbox_Maquina.Selected.Result = CAF).CAPACIDADE , CAPACIDADE)),0,Max(Filter( CreateMaquina , Cbox_Maquina.Selected.Result = CAF).CAPACIDADE , CAPACIDADE))
+        Visible: =false
         Width: =54
         X: =657
         ZIndex: =30
@@ -8418,4 +8417,13 @@
         X: =145
         Y: =53
         ZIndex: =601
+
+    "'Prod. Dia' As label":
+        Height: =20
+        Size: =12
+        Text: |
+            =Sum(Prod_0,Prod_1,Prod_2,Prod_3,Prod_4,Prod_5,Prod_6,Prod_7,Prod_8,Prod_9,Prod_10,Prod_11,Prod_12,Prod_13,Prod_14,Prod_15,Prod_16,Prod_17,Prod_18,Prod_19,Prod_20,Prod_21,Prod_22,Prod_23)
+        Width: =54
+        X: =657
+        ZIndex: =602
 
