--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8419,6 +8419,7 @@
         ZIndex: =601
 
     "'Prod. Dia' As label":
+        Align: =Align.Center
         Height: =20
         Size: =12
         Text: |
