--- a/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
@@ -82,8 +82,8 @@
                     "HORA_INICIO",
                     If(
                         SortDescending1,
-                        Descending,
-                        Ascending
+                        SortOrder.Descending,
+                        SortOrder.Ascending
                         
                     )
                 ),
