--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -444,7 +444,7 @@
         Height: =20
         Size: =12
         Text: |+
-            =Max(Filter( LancamentoProducao , Cbox_Maquina.Selected.Result = MAQUINA).CAPACIDADE , CAPACIDADE)
+            =If(IsBlank(Max(Filter( LancamentoProducao , Cbox_Maquina.Selected.Result = MAQUINA).CAPACIDADE , CAPACIDADE)),0)
             
             //24*If( IsBlank(Max(Filter( CreateMaquina ; Cbox_Maquina.Selected.Result = CAF).CAPACIDADE ; CAPACIDADE));0;Max(Filter( CreateMaquina ; Cbox_Maquina.Selected.Result = CAF).CAPACIDADE ; CAPACIDADE))
             
